[package]
name = "jupiter-cpi-tulip"
version = "3.0.2"
edition = "2021"
description = "Anchor CPI client for the Jupiter program."
authors = ["Siong Ong <siong@raccoons.dev>"]
repository = "https://github.com/jup-ag/jupiter-cpi"
license = "Apache-2.0"
keywords = ["solana", "anchor", "cpi", "jupiter"]

[features]
default = ["cpi"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-gen-tulip = "0.4.0"
anchor-lang = ">=0.22"
[profile.release]
opt-level = "s"
incremental = false
codegen-units = 1
[profile.release.build-override]
opt-level = "s"
incremental = false
codegen-units = 1